syntax = "proto3";
package serialization;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message StructPB {
    string field1 = 1;
    int64 field2 = 2;
    repeated string field3 = 3;
    uint64 field4 = 4;
    string field5 = 5;
    string field6 = 6;
    bytes field7 = 7;
}
